kubernetes/apps/self-hosted/music-assistant/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: music-assistant-allow
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: music-assistant
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8095"
              protocol: TCP
            - port: "8097"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
